NavigationSystem almost finished (missing mutex)

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                 </li>
             </ul>
 
-            <h2>NaviSystem</h2>
+            <h2>NavigationSystem</h2>
 
             <ul class="group framework">
                 <li>
-                    <a href="NaviSystem">Navigation System</a>
+                    <a href="NavigationSystem">Navigation System</a>
 
                     <p>Funktionsbeschreibung fehlt noch...</p>
                 </li>
