All Plugin finished

--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
                 </li>
             </ul>
 
-            <h2>CustomPlugin</h2>
+            <h2>Rainbowtable System</h2>
 
             <ul class="group blog">
                 <li>
-                    <a href="CustomPlugin">Custom Plugin</a>
+                    <a href="RBTSystem">Rainbowtable System</a>
 
                     <p>Funktionsbeschreibung fehlt noch...</p>
                 </li>
